[gd_scene load_steps=8 format=3 uid="uid://ckh1m5g4k173f"]

[ext_resource type="PackedScene" uid="uid://hhfcafer6do7" path="res://Scenes/Menus/PopupUI/PopupUI.tscn" id="1_xa8gs"]
[ext_resource type="Script" path="res://Scenes/Menus/PopupUI/PauseMenu/PauseMenu.gd" id="2_ddbok"]
[ext_resource type="PackedScene" uid="uid://b0ucl7u8x0nhb" path="res://Scenes/Menus/PopupUI/OptionMenu/OptionMenu.tscn" id="2_rvusn"]
[ext_resource type="PackedScene" uid="uid://dmfmohxgh03pp" path="res://Scenes/Menus/PopupUI/ConfirmationMenu/ConfirmationMenu.tscn" id="4_iccss"]

[sub_resource type="Animation" id="Animation_j7mqd"]
resource_name = "Open"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(800, 112), Vector2(800, 524)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(176, 268), Vector2(176, 62)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/Inside:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.19, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}

[sub_resource type="Animation" id="Animation_8w0s8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(800, 112)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(176, 268)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel/Inside:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ehoko"]
_data = {
"Open": SubResource("Animation_j7mqd"),
"RESET": SubResource("Animation_8w0s8")
}

[node name="PauseMenu" instance=ExtResource("1_xa8gs")]
process_mode = 3
script = ExtResource("2_ddbok")

[node name="VSplitContainer" type="VSplitContainer" parent="Panel/Inside" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
dragger_visibility = 1

[node name="Label" type="Label" parent="Panel/Inside/VSplitContainer" index="0"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/Inside/VSplitContainer" index="1"]
layout_mode = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_right = 300

[node name="Buttons" type="VBoxContainer" parent="Panel/Inside/VSplitContainer/MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="ResumeButton" type="Button" parent="Panel/Inside/VSplitContainer/MarginContainer/Buttons" index="0"]
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenuButton")
focus_previous = NodePath("../MainMenuButton")
text = "Resume"

[node name="OptionButton" type="Button" parent="Panel/Inside/VSplitContainer/MarginContainer/Buttons" index="1"]
layout_mode = 2
text = "Option"

[node name="MainMenuButton" type="Button" parent="Panel/Inside/VSplitContainer/MarginContainer/Buttons" index="2"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../ResumeButton")
focus_next = NodePath("../ResumeButton")
text = "Main Menu"

[node name="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_ehoko")
}

[node name="OptionMenu" parent="." index="3" instance=ExtResource("2_rvusn")]
visible = false
layout_mode = 1

[node name="ConfirmationMenu" parent="." index="4" instance=ExtResource("4_iccss")]
layout_mode = 1

[connection signal="pressed" from="Panel/Inside/VSplitContainer/MarginContainer/Buttons/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/Inside/VSplitContainer/MarginContainer/Buttons/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="Panel/Inside/VSplitContainer/MarginContainer/Buttons/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
